# gambit

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  HISTORY  LICENSE  README.md  optional.txt
.github/workflows/: ci.yml  ci_Mac_arm64.yml  ci_Mac_x64.yml  ci_linux.yml  cmake.yml  fmt.yaml
Backends/patches/darkcast/: darkcast_patch.diff
Backends/scripts/: backend_harvester.py
Backends/scripts/BOSS/: boss.py
Backends/src/: backend_info.cpp  ini_functions.cpp
Backends/src/backend_types/: MultiModeCode.cpp
Backends/src/frontends/: ATLAS_FullLikes_1_0.cpp  Acropolis_1_2_1.cpp  AlterBBN_2_2.cpp  DarkCast_1_1.cpp  DarkSUSY_generic_wimp_6_4_0.cpp  MontePythonLike_3_3_0.cpp  MontePythonLike_3_5_0.cpp  SPheno_3_3_8.cpp  SPheno_4_0_3.cpp  SUSY_HIT_1_5.cpp  classy_2_6_3.cpp  classy_2_9_3.cpp  classy_2_9_4.cpp  classy_exo_2_7_2.cpp
ColliderBit/examples/: ColliderBit_SLHA_file_model.yaml  ColliderBit_SLHA_scan_model.yaml  solo.cpp
ColliderBit/scripts/: collider_harvester.py
ColliderBit/src/: ColliderBit_Bfactories.cpp  ColliderBit_InterpolatedYields.cpp  ColliderBit_eventloop.cpp  ColliderBit_measurements.cpp  LHC_likelihoods.cpp  PoissonCalculators.cpp  Utils.cpp  collider_event_weights.cpp  getAnalysisContainer.cpp  getHepMCEvent.cpp  getLHEvent.cpp  getxsec.cpp  lhef2heputils.cpp
ColliderBit/src/analyses/: Analysis.cpp  Analysis_ATLAS_13TeV_0LEPStop_36invfb.cpp  Analysis_ATLAS_13TeV_0LEP_139invfb.cpp  Analysis_ATLAS_13TeV_0LEP_13invfb.cpp  Analysis_ATLAS_13TeV_0LEP_36invfb.cpp  Analysis_ATLAS_13TeV_1LEPStop_36invfb.cpp  Analysis_ATLAS_13TeV_1Lep2b_139invfb.cpp  Analysis_ATLAS_13TeV_2BoostedBosons_139invfb.cpp  Analysis_ATLAS_13TeV_2LEPStop_139invfb.cpp  Analysis_ATLAS_13TeV_2LEPStop_36invfb.cpp  Analysis_ATLAS_13TeV_2OSLEP_Z_139invfb.cpp  Analysis_ATLAS_13TeV_2OSLEP_chargino_139invfb.cpp  Analysis_ATLAS_13TeV_2OSLEP_chargino_80invfb.cpp  Analysis_ATLAS_13TeV_2bMET_36invfb.cpp  Analysis_ATLAS_13TeV_3LEP_139invfb.cpp  Analysis_ATLAS_13TeV_3b_24invfb.cpp  Analysis_ATLAS_13TeV_3b_36invfb.cpp  Analysis_ATLAS_13TeV_4LEP_139invfb.cpp  Analysis_ATLAS_13TeV_4LEP_36invfb.cpp  Analysis_ATLAS_13TeV_MONOJET_139infb.cpp  Analysis_ATLAS_13TeV_MultiLEP_36invfb.cpp  Analysis_ATLAS_13TeV_MultiLEP_confnote_36invfb.cpp  Analysis_ATLAS_13TeV_MultiLEP_strong_139invfb.cpp  Analysis_ATLAS_13TeV_PhotonGGM_1Photon_139invfb.cpp  Analysis_ATLAS_13TeV_PhotonGGM_36invfb.cpp  Analysis_ATLAS_13TeV_RJ3L_lowmass_36invfb.cpp  Analysis_ATLAS_13TeV_ZGammaGrav_CONFNOTE_80invfb.cpp  Analysis_ATLAS_7TeV_1OR2LEPStop_4_7invfb.cpp  Analysis_ATLAS_7TeV_2LEPStop_4_7invfb.cpp  Analysis_ATLAS_8TeV_0LEP_20invfb.cpp  (+32 more)
Core/: CMakeLists.txt
Core/src/: core.cpp  depresolver.cpp  diagnostics.cpp  gambit.cpp  likelihood_container.cpp  modelgraph.cpp  observable.cpp  resolution_utilities.cpp  rule.cpp  yaml_parser.cpp
CosmoBit/src/: BBN.cpp  CosmoBit.cpp  CosmoBit_types.cpp
DarkBit/examples/: DarkBit_standalone_MSSM.cpp  DarkBit_standalone_ScalarSingletDM_Z2.cpp  DarkBit_standalone_WIMP.cpp
DarkBit/src/: AntiprotonLikelihoods.cpp  Axions.cpp  DarkBit.cpp  DarkBit_types.cpp  DirectDetection.cpp  EnergyInjection.cpp  IndirectDetectionYields.cpp  RelicDensity.cpp  SimpleLikelihoods.cpp  SubGeVDM_SelfInteractions.cpp  SubGeVDM_fermion.cpp  SubGeVDM_scalar.cpp  Xray.cpp
DecayBit/examples/: 3bithit.cpp
DecayBit/src/: DecayBit.cpp
Elements/: CMakeLists.txt
Elements/scripts/: module_harvester.py
Elements/src/: functors.cpp  virtual_photon.cpp
ExampleBit_A/examples/: ExampleBit_A_standalone_example.cpp
ExampleBit_A/src/: ExampleBit_A.cpp
FlavBit/examples/: FlavBit_standalone_example.cpp
FlavBit/src/: FlavBit.cpp
Models/scripts/: model_harvester.py  particle_harvester.py
Models/src/: models.cpp
NeutrinoBit/examples/: NeutrinoBit_standalone.cpp  NeutrinoBit_standalone_RHN.cpp
PrecisionBit/src/: PrecisionBit.cpp
Printers/scripts/: printer_harvester.py
Printers/src/: printermanager.cpp
ScannerBit/python/: CMakeLists.txt  ScannerBit.yaml  bugs.py  example.py
ScannerBit/python/cmake/: boost_python.cmake  boost_python_install.cmake  scan_python_utils.cmake  yaml.cmake
ScannerBit/python/include/: diagnostics.hpp  interface.hpp  python.hpp  python_utils.hpp  python_utils_boost.hpp  run_scan.hpp  run_scan_boost.hpp
ScannerBit/python/src/: diagnostics.cpp  python.cpp  python_boost.cpp  run_scan.cpp
ScannerBit/scripts/: scanner+_harvester.py
ScannerBit/src/: plugin_details.cpp  plugin_loader.cpp  scan.cpp
SpecBit/src/: SpecBit_SubGeVDM.cpp  SpecBit_types.cpp
Utils/: CMakeLists.txt
Utils/scripts/: harvesting_tools.py
Utils/src/: exceptions.cpp  interp_collection.cpp  model_parameters.cpp  mpiwrapper.cpp  python_interpreter.cpp  standalone_utils.cpp  util_functions.cpp
cmake/: backends.cmake  cmake_variables.hpp.in  contrib.cmake  executables.cmake  externals.cmake  python_scanners.cmake  scanners.cmake  standalones.cmake  tarball_info.cmake  utilities.cmake  warnings.cmake
cmake/scripts/: build_backends.sh  safe_dl.sh  update_cmakelists.py
config/: backend_locations.yaml.default  bibtex_entries.bib  particle_database.yaml  scanner_locations.yaml.default
contrib/preload/: gambit_preload.cpp
gum/: CMakeLists.txt  gum.py
gum/Templates/: ColliderBit_model.cpp  ColliderBit_model.hpp
gum/Tutorial/: MDMSM_Collider.gum  MDMSM_Collider.yaml  README
gum/cmake/: contrib.cmake
gum/src/: cmake_variables.py.in  colliderbit.py  files.py  particledb.py  pythia.py
yaml_files/: CMSSM.yaml  ColliderBit_CMSSM.yaml  CosmoBit_quickStart.yaml  CosmoBit_tutorial.yaml  DMEFT.yaml  DMsimp.yaml  DarkBit_MSSM7.yaml  DarkBit_ScalarSingletDM_Z2.yaml  DiracSingletDM_Z2.yaml  FlavBit_CMSSM.yaml  MSSM7.yaml  MSSM9.yaml  MajoranaSingletDM_Z2.yaml  NUHM1.yaml  NUHM2.yaml  Python_test.yaml  QCDAxions.yaml  ScalarSingletDM_Z2.yaml  ScalarSingletDM_Z3.yaml  ScannerBit.yaml  SpecBit_MSSM_test.yaml  SpecBit_ScalarSingletDM_vacuum_stability.yaml  SubGeVDM.yaml  UMVUEestimator_test.yaml  VectorSingletDM_Z2.yaml  WC.yaml  WC_lite.yaml  postprocessor_demo.yaml  spartan.pip  spartan.yaml  spartan_NUHM1.yaml
(+399 files in other folders)
